--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta name="google-signin-client_id" content="110183205899787291189.googleusercontent.com">
+    <meta name="google-signin-client_id" content="356481785113-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com">
    
     <style>
         html,
@@ -265,7 +265,7 @@ Your browser does not support the audio element.
      data-client_id="110183205899787291189-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com"
      data-context="signup"
      data-ux_mode="redirect"
-     data-login_uri="https://novo0007.github.io/Nopeca"
+     data-login_uri="https://novo0007.github.io/Nopeca/"
      data-nonce=""
      data-itp_support="true">
 </div>
@@ -283,8 +283,8 @@ Your browser does not support the audio element.
      data-client_id="356481785113-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com"
      data-context="signin"
      data-ux_mode="redirect"
-     data-login_uri="https://novo0007.github.io/Nopeca/#gsc.tab=0"
-     data-callback="https://novo0007.github.io/Nopeca/"
+     data-login_uri="https://novo0007.github.io/Nopeca/"
+     data-callback="https://novo0007.github.io/Nopeca/#gsc.tab=0"
      data-nonce=""
      data-itp_support="true">
 </div>
@@ -418,6 +418,7 @@ a:hover, a:active {
        YouTube
     </button>
          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+       <br>
 <a href="https://novo0007.github.io/Nopeca/#gsc.tab=0" onclick="signOut();">Sign out</a>
 <script>
   function signOut() {
