--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@ Your browser does not support the audio element.
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button>
                     
                     <div id="g_id_onload"
-     data-client_id="110183205899787291189-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com"
+     data-client_id="356481785113-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com"
      data-context="signup"
      data-ux_mode="redirect"
-     data-login_uri="https://novo0007.github.io/Nopeca/"
+     data-login_uri="https://nopeca-web.business.site/"
      data-nonce=""
      data-itp_support="true">
 </div>
@@ -283,7 +283,7 @@ Your browser does not support the audio element.
      data-client_id="356481785113-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com"
      data-context="signin"
      data-ux_mode="redirect"
-     data-login_uri="https://novo0007.github.io/Nopeca/"
+     data-login_uri="https://nopeca-web.business.site/"
      data-callback="https://novo0007.github.io/Nopeca/#gsc.tab=0"
      data-nonce=""
      data-itp_support="true">
