--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 2, 2000 </p>
                     </div>
                 </div>
+               <br>
                 <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=302&amp;height=234&amp;hl=en&amp;q=In&amp;t=k&amp;z=3&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://formatjson.org/">format json</a></div><style>.mapouter{position:relative;text-align:right;width:302px;height:234px;}.gmap_canvas {overflow:hidden;background:none!important;width:302px;height:234px;}.gmap_iframe {width:302px!important;height:234px!important;}</style></div>
                 <!DOCTYPE html>
 <html>
@@ -165,7 +166,11 @@ onclick="document.getElementById('demo').innerHTML = Date()"> Date and Time.</bu
 Your browser does not support the audio element.
 </audio>
    <br>
-   <audio id="audio" src="https://dl.dropbox.com/s/rf7jk177drpbu0f/Happy%20Birthday%20Kids%20Mix.mp3" controls="true"></audio>
+   <p>happy birthday</p>
+      <audio id="audio" src="https://dl.dropbox.com/s/rf7jk177drpbu0f/Happy%20Birthday%20Kids%20Mix.mp3" controls="true"></audio>
+   <br>
+   <p>INTERNET RADIO PLAYER</p>
+   <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" autoplay="true" controls="true"><audio>
 
 </body>
 </html>
