--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@ Your browser does not support the audio element.
    <br>
    <p>INTERNET RADIO PLAYER</p>
    <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" autoplay="true" controls="true"><audio>
-
+<br>
+      <p> NE Hits</p>
+      <audio src="http://rfcmedia.streamguys1.com/newpophitspremium.mp3" autoplay="true" controls="true"><audio>
 </body>
 </html>
                 <!DOCTYPE html>
