--- a/index.html
+++ b/index.html
@@ -173,7 +173,12 @@ Your browser does not support the audio element.
    <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" autoplay="true" controls="true"><audio>
 <br>
       <p> NE Hits</p>
-    
+    <video width="320" height="240" controls>
+  <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/movie%20hindi.mp4?alt=media&token=e7871c7b-675d-4017-922a-ec2351980317" type="video/mp4">
+  
+  Your browser does not support the video tag.
+</video>
+
 </body>
 </html>
                 <!DOCTYPE html>
