--- a/index.html
+++ b/index.html
@@ -172,13 +172,6 @@ Your browser does not support the audio element.
    <p>INTERNET RADIO PLAYER</p>
    <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" autoplay="true" controls="true"><audio>
 <br>
-      <p> NE Hits</p>
-    <video width="320" height="240" controls>
-  <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/movie%20hindi.mp4?alt=media&token=e7871c7b-675d-4017-922a-ec2351980317" type="video/mp4">
-  
-  Your browser does not support the video tag.
-</video>
-
 </body>
 </html>
                 <!DOCTYPE html>
@@ -346,15 +339,20 @@ a:hover, a:active {
 
                 <div class="w3-card w3-round w3-white w3-center">
                     <div class="w3-container">
-                        <p>Friend Request</p>
-                        <img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" style="width:50%"><br>
-                        <span>Nel Son</span>
+                        <p>Full Movie ( Hindi)</p>
+                        <video width="320" height="240" controls="">
+  <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/movie%20hindi.mp4?alt=media&amp;token=e7871c7b-675d-4017-922a-ec2351980317" type="video/mp4">
+  
+  Your browser does not support the video tag.
+</video>
+                        <span> enjoy your time </span>
+                       <br>
                         <div class="w3-row w3-opacity">
                             <div class="w3-half">
-                                <button class="w3-button w3-block w3-green w3-section" title="Accept"><i class="fa fa-check"></i></button>
+                               
                             </div>
                             <div class="w3-half">
-                                <button class="w3-button w3-block w3-red w3-section" title="Decline"><i class="fa fa-remove"></i></button>
+                               
                             </div>
                         </div>
                     </div>
