--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 <div class="w3-card w3-round w3-white">
                     <div class="w3-container">
                         <h4 class="w3-center">My Profile</h4>
-                        <p class="w3-center"><img src="https://www.w3schools.com/w3images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
+                        <p class="w3-center"><img src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/images%2Fnovo.jpg?alt=media&token=ee944a5f-50f3-488b-b7be-0b252e49391f" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
                         <hr>
                         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> NE Official ™ </p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>New Delhi, IN </p>
-                        <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 2, 2000 </p>
+                        <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> February 2, 2003 </p>
                     </div>
                 </div>
                <br>
@@ -210,7 +210,7 @@ Your browser does not support the audio element.
                     <div class="w3-col m12">
                         <div class="w3-card w3-round w3-white">
                             <div class="w3-container w3-padding">
-                                <h6 class="w3-opacity">Social Media By NE</h6>
+                                <h6 class="w3-opacity">FireIce Browser</h6>
                                 <script async src="https://cse.google.com/cse.js?cx=115e2fc7d9b384259">
 </script>
 <div class="gcse-search"></div>
@@ -338,13 +338,13 @@ a:hover, a:active {
 
                 <div class="w3-card w3-round w3-white w3-center">
                     <div class="w3-container">
-                        <p>Full Movie ( Hindi)</p>
+                        <p><strong>Full Music (Hindi)</strong></p>
                         <video width="320" height="240" controls="">
-  <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/movie%20hindi.mp4?alt=media&amp;token=e7871c7b-675d-4017-922a-ec2351980317" type="video/mp4">
+  <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/videos%2F'Baaton_Ko_Teri'_FULL_VIDEO_Song__Arijit_Singh__Abhishek_Bachchan%2C_Asin__T-Series(144p).mp4?alt=media&token=abe7cc6c-e261-4df3-9348-fb9e383cf9d1" type="video/mp4">
   
   Your browser does not support the video tag.
 </video>
-                        <span> enjoy your time </span>
+                        <span> enjoy your time</span>
                        <br>
                         <div class="w3-row w3-opacity">
                             <div class="w3-half">
