--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ a:hover, a:active {
                     <div class="w3-container">
                         <p><strong>Full Music (Hindi)</strong></p>
                         <video width="320" height="240" controls="">
-  <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/videos%2F'Baaton_Ko_Teri'_FULL_VIDEO_Song__Arijit_Singh__Abhishek_Bachchan%2C_Asin__T-Series(144p).mp4?alt=media&token=abe7cc6c-e261-4df3-9348-fb9e383cf9d1" type="video/mp4">
+  <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/videos%2F_Hoopa_and_the_Clash_of_Ages_In_Hindi(360p).mp4?alt=media&token=3d056df6-1409-4912-bb3f-cab713fe0f9a" type="video/mp4">
   </video>
                  <span> enjoy your time</span>
                        <br>
@@ -357,7 +357,7 @@ a:hover, a:active {
                 <br>
 
                 <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
-                    <p><marquee>ADS- (The Pokémon movie is coming tonight at 10 p.m)</marquee> </p>
+                    <p><marquee>ADS- (Welcome Everyone. Next movie is coming soon)</marquee> </p>
                     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EF9VTKXB5G"></script>
 <script>
