--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ a:hover, a:active {
 
                 <div class="w3-card w3-round w3-white w3-center">
                     <div class="w3-container">
-                        <p><strong>Full Music (Hindi)</strong></p>
+                        <p><strong>Full Movie (Hindi)</strong></p>
                         <video width="320" height="240" controls="">
   <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/videos%2F_Hoopa_and_the_Clash_of_Ages_In_Hindi(360p).mp4?alt=media&token=3d056df6-1409-4912-bb3f-cab713fe0f9a" type="video/mp4">
   </video>
