--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ a:hover, a:active {
                 <br>
 
                 <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
-                    <p><marquee>ADS- (Welcome Everyone. Next movie is coming soon)</marquee> </p>
+                    <p><marquee>ADS- (Black Panther movie is coming on tonight at 8pm...🎬 Comment me which movie you want to watch next.. )</marquee> </p>
                     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EF9VTKXB5G"></script>
 <script>
