--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Your browser does not support the audio element.
 
                 <div class="w3-row-padding">
                     <div class="w3-col m12">
-                        <div class="w3-card w3-round w3-white">
+                        <div class="w3-card w3-round w3-black">
                             <div class="w3-container w3-padding">
                                 <h6 class="w3-opacity">FireIce Browser</h6>
                                 <script async src="https://cse.google.com/cse.js?cx=115e2fc7d9b384259">
@@ -236,21 +236,11 @@ Your browser does not support the audio element.
                         </div>
                     </div>
                     <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>Like</button>
-                    <!DOCTYPE html>
-<title>My Example</title>
-
-<form action="" method="post">
-<div>
-<textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
-
-</textarea>
-</div>
-<input type="submit" value="Submit">
-</form>
+                    
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i> Comment</button>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
+                <div class="w3-container w3-card w3-black w3-round w3-margin"><br>
                     <img src="https://www.w3schools.com/w3images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">16 min</span>
                     <h4>인손</h4><br>
@@ -260,7 +250,7 @@ Your browser does not support the audio element.
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
+                <div class="w3-container w3-card w3-black w3-round w3-margin"><br>
                     <img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">32 min</span>
                     <h4>Lisa</h4><br>
@@ -268,8 +258,8 @@ Your browser does not support the audio element.
                     <p>Have you seen this?</p>
                     <img src="https://www.w3schools.com/w3images/nature.jpg" style="width:100%" class="w3-margin-bottom">
                     <p>It is important to take care of the pain itself, and it will be followed by the growth of the patient, but at the same time it will happen that there is a lot of work and pain. For to come to the smallest detail, no one should practice any kind of work unless he derives some benefit from it.</p>
-                    <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button>
+                    <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i> 1.2Like</button>
+                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i> Comment</button>
                    <br>
                    <html>
   <body>
@@ -290,7 +280,7 @@ Your browser does not support the audio element.
 
             <!-- Right Column -->
             <div class="w3-col m2">
-                <div class="w3-card w3-round w3-white w3-center">
+                <div class="w3-card w3-round w3-black w3-center">
                     <div class="w3-container">
                         <p>Upcoming Events:</p>
                         <!DOCTYPE html>
@@ -336,13 +326,16 @@ a:hover, a:active {
                 </div>
                 <br>
 
-                <div class="w3-card w3-round w3-white w3-center">
+                <div class="w3-card w3-round w3-black w3-center">
                     <div class="w3-container">
                         <p><strong>Full Movie (Hindi)</strong></p>
                         <video width="320" height="240" controls="">
   <source src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/videos%2F_Hoopa_and_the_Clash_of_Ages_In_Hindi(360p).mp4?alt=media&token=3d056df6-1409-4912-bb3f-cab713fe0f9a" type="video/mp4">
   </video>
-                 <span> enjoy your time</span>
+              <span class="inline-metadata-item style-scope ytd-video-meta-block">1.5k  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+  <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
+  <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
+</svg></span> 
                        <br>
                         <div class="w3-row w3-opacity">
                             <div class="w3-half">
@@ -356,8 +349,8 @@ a:hover, a:active {
                 </div>
                 <br>
 
-                <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
-                    <p><marquee>ADS- (Black Panther movie is coming on tonight at 8pm...🎬 Comment me which movie you want to watch next.. )</marquee> </p>
+                <div class="w3-card w3-round w3-black w3-padding-16 w3-center">
+                    <p><marquee>AD- (Black Panther movie is coming on tonight at 8pm...🎬 Comment me which movie you want to watch next.. )</marquee> </p>
                     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EF9VTKXB5G"></script>
 <script>
@@ -372,7 +365,7 @@ a:hover, a:active {
                
                 <br>
 
-                <div class="w3-card w3-round w3-white w3-padding-32 w3-center">
+                <div class="w3-card w3-round w3-black w3-padding-32 w3-center">
                     <p><i class="fa fa-bug w3-xxlarge"></i></p>
                 </div>
 
