--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ onclick="document.getElementById('demo').innerHTML = Date()"> Date and Time.</bu
 <body>
 <h1 style="color:#1a1a1a;">Music</h1>
     <p style="color:red;">Download mp3.🎶</p>
-<audio controls autoplay>
+<audio controls >
     <source src="The_Depth.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
@@ -169,7 +169,7 @@ Your browser does not support the audio element.
       <audio id="audio" src="https://dl.dropbox.com/s/rf7jk177drpbu0f/Happy%20Birthday%20Kids%20Mix.mp3" controls="true"></audio>
    <br>
    <p>NE RADIO Live</p>
-   <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" autoplay="true" controls="true"><audio>
+   <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" autoplay="false" controls="true"><audio>
 <br>
 </body>
 </html>
