--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Your browser does not support the audio element.
       <audio id="audio" src="https://dl.dropbox.com/s/rf7jk177drpbu0f/Happy%20Birthday%20Kids%20Mix.mp3" controls="true"></audio>
    <br>
    <p>NE RADIO Live</p>
-   <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" autoplay="false" controls="true"><audio>
+   <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" controls="true"><audio>
 <br>
 </body>
 </html>
