--- a/index.html
+++ b/index.html
@@ -493,7 +493,17 @@ function makeNormal() {
     myVideo.width = 420; 
 } 
 </script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7196290945919417"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fx-24-48-ed+1ic"
+     data-ad-client="ca-pub-7196290945919417"
+     data-ad-slot="8372586136"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 </body>
 </html>
