--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
    <body>
    
 <head>
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7196290945919417"
+     crossorigin="anonymous"></script>
     <title>Nopeca</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
