--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@ onclick="document.getElementById('demo').innerHTML = Date()"> Date and Time.</bu
                 <br>
 
                 <!-- Interests -->
+               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7196290945919417"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-58+bv-t-3k+p3"
+     data-ad-client="ca-pub-7196290945919417"
+     data-ad-slot="1928947774"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 <div class="w3-card w3-round w3-white w3-hide-small">
                     <div class="w3-container">
                         <p>Interests</p>
