--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <h4 class="w3-center">My Profile</h4>
                         <p class="w3-center"><img src="https://firebasestorage.googleapis.com/v0/b/nopeca-106bd.appspot.com/o/images%2Fnovo.jpg?alt=media&token=ee944a5f-50f3-488b-b7be-0b252e49391f" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
                         <hr>
-                        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> NE Official ™ </p>
+                        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> NE Official ™ <img src= "https://www.bandlab.com/web-app/images/profile/verified-d2e3095ceb.svg"></p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>New Delhi, IN </p>
                         <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> February 2, 2003 </p>
                     </div>
