--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@ Your browser does not support the audio element.
 
                 <div class="w3-container w3-card w3-black w3-round w3-margin"><br>
                     <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">1 min</span>
-                    <h4>Classy </h4><br>
+                    <span class="w3-right w3-opacity">9 month </span>
+                    <h4>Classy <img src= "https://www.bandlab.com/web-app/images/profile/verified-d2e3095ceb.svg"></h4><br>
                     <hr class="w3-clear">
                     <p>Il est important de prendre soin de la douleur elle-même, et elle sera suivie par la croissance du patient, mais en même temps, il arrivera qu'il y ait beaucoup de travail et de douleur. Car pour en venir au moindre détail, nul ne doit pratiquer un travail quelconque s'il n'en tire aucun bénéfice.</p>
                     <div class="w3-row-padding" style="margin:0 -16px">
