--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@ Your browser does not support the audio element.
 
                 <div class="w3-card w3-round w3-white w3-center">
                     <div class="w3-container">
-                        <p><strong>Any Movie (Hindi)</strong></p>
-                      <h1>Movie link</h1>
+                        <p><strong> Movie (Hindi)</strong></p>
+                      <h1>Movies</h1>
 
-<p><a href="https://novo0007.github.io/fireicedmovies/">All Movie 🎦 </a></p>
+<p><a href="movies.html">All Movie 🎦 </a></p>
 
                         <div class="w3-row w3-opacity">
                             <div class="w3-half">
