--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7196290945919417"
      crossorigin="anonymous"></script>
-      </head>
-    <title>Nopeca</title>
+    
+    <title>NNC</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -42,7 +42,7 @@
     <div class="w3-top">
         <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-            <a href="https://nopeca-web.business.site/" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="fa fa-home w3-margin-right"></i>Nopeca</a>
+            <a href="https://nopeca-web.business.site/" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="fa fa-home w3-margin-right"></i>NNC</a>
             <a href="https://www.instagram.com/neofficial_19/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Instagram"><i class="fa fa-globe"></i></a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Account Settings"><i class="fa fa-user"></i></a>
             <a href="mailto:nopeca19@gmail.com" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Send email Messages"><i class="fa fa-envelope"></i></a>
@@ -180,10 +180,10 @@ onclick="document.getElementById('demo').innerHTML = Date()"> Date and Time.</bu
 Your browser does not support the audio element.
 </audio>
    <br>
-   <p>happy birthday</p>
+   <p>Happy Birthday</p>
       <audio id="audio" src="https://dl.dropbox.com/s/rf7jk177drpbu0f/Happy%20Birthday%20Kids%20Mix.mp3" controls="true"></audio>
    <br>
-   <p>NE RADIO Live</p>
+   <p>NNC RADIO Live</p>
    <audio src="https://www.partyvibe.com:8060/;listen.pls?sid=1" controls="true"><audio>
 <br>
 </body>
